Correction des TP dates

--- a/TP_PHP/TP_PHP_date2/style.css
+++ b/TP_PHP/TP_PHP_date2/style.css
@@ -6,7 +6,8 @@ body{
 h1{
     text-align: center;
     border: 5px groove lightslategray;
-    padding: 20px;
+    padding: 2%;
+    margin-bottom: 500px;
 }
 
 p{
