--- a/monSite/styleGrid.css
+++ b/monSite/styleGrid.css
@@ -35,6 +35,7 @@ footer{
     font-size: 20px;
     text-align: center;
     border-top: 1px solid black;
+    color: bisque
 }
 
 nav{
@@ -43,21 +44,17 @@ nav{
     text-align: center;
     background: royalblue;
     border-bottom: 1px solid black;
-    
 }
 
-nav a{
-    color: black;
+nav a{  
     text-decoration: none;
     margin-right: 20px;
     height: 100px;
     padding: 10px;
+    color: bisque
 }
 
 nav a:hover{
     background: blue;
-    color: bisque;
-    border-radius: 10px;
-    
-    
+    border-radius: 10px; 
 }
