--- a/cv_en_lignePHP/styleCV.css
+++ b/cv_en_lignePHP/styleCV.css
@@ -1,10 +1,18 @@
-body,
-html{
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0; 
+  box-sizing: border-box;
 }
+
+body, html {
+  height: 100vh;
+}
+
+body{
+  display: flex;
+  flex-direction: column;
+}
+
 /*Fond d'écrand Parallax Scroll Animation*/
 
 /* Hide scrollbar for Chrome, Safari and Opera */
@@ -24,25 +32,206 @@ svg {
       position: fixed;
       top: 0;
       left: 0;
-}
-  
-.scrollElement {
+    }
+
+    .scrollElement {
       position: absolute;
       height: 6000px;
       width: 100px;
       top: 0;
-      z-index: 0;
+      z-index: 1;
 }
 
-main {
-    padding: 125px 50px 50px;
-    border: 1px black solid;
+/*Main*/
+main{
     flex-grow: 1;
+    padding-top: 100px;
+    margin: 20px;
+    z-index: 2;
 }
 
+h1{
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+/*Footer*/
 footer{
-    background: #f1f1f1;
+    background-color: black;
+    color: white;
     padding: 10px;
     font-size: 20px;
     text-align: center;
+    z-index: 0;
+    margin-bottom: 0vh;
+    width: 100%;
+  }
+.footer{
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  display: flex;
+  align-items: end;
 }
+
+/* Header avec ses bouttons menu */
+
+header{
+  position: fixed;
+  z-index: 3;
+  width: 100%;
+}
+
+#btnmenu{
+  display: flex;
+  justify-content:space-around;
+  padding: 20px 20px 20px 20px;
+}
+
+.but{
+  height: 50px;   
+  width: 100px;
+}
+
+button{
+  height: 5vh;
+  width: 10vw;
+  font-size: medium;
+  border-radius: 50px;
+  background-color: rgb(125,78,166);
+  position: fixed;
+  box-shadow: 4px 3px 5px  rgba(51,43,85, 0.7);
+  color: white; 
+}
+
+/* Menu Burger*/
+#burger{
+  display: hidden;
+}
+#listeburger{
+  margin-left: 50px;
+  list-style-type: none;
+}
+.menuburger{
+  text-decoration: none;
+}
+
+/* Liens */
+
+button:hover{
+  transform: scale(1.2);
+  box-shadow:5px 4px 5px  rgba(51,43,85, 0.7);
+}
+
+.lienmenu{
+  text-decoration: none;
+  color: white;
+}
+
+/*Accueil*/
+
+.curri{
+  border-radius: 50px;
+  border: 5px ridge;
+ 
+ 
+  margin-left: 40%;
+  height: 450px;
+  width: 55%;
+  padding-top: 5%;
+  background-color: rgb(145, 238, 145,0.50);
+}
+
+.photo{
+  
+  float: left;
+}
+
+.photo{
+ border-radius: 50%;
+ border: 5px ridge;
+ box-shadow:10px 10px 10px 10px rgba(0,0,0,0.5);
+}
+
+.photo:hover {
+  transform: scale(1.2);
+}
+
+
+/* Contact */
+
+.tablecontact{
+  margin: auto;
+  margin-bottom: 20px;
+  padding: 10px;
+  width: auto;
+  border: 5px outset;
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 20px;
+
+}
+.tablecontact, tr, td{
+
+  padding: 10px;
+ 
+}
+
+
+
+form{
+  margin: auto;
+  text-align: center;
+  width: 60%;
+}
+fieldset{
+  border: 5px outset;
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+}
+
+input, textarea{
+  padding: 10px;
+  text-align: center;
+  border-radius: 10px;
+  margin: 5px;
+}
+
+
+
+.nom{
+  width: 40%;
+}
+
+.email{
+  width: 40%;
+}
+
+.telephone{
+  width: 40%;
+}
+
+.objet{
+  width: 40%;
+}
+
+.texte{
+  width: 70%;
+}
+
+.envoyer{
+  background-color: rgb(125,78,166);
+  color: white;
+}
+
+.annuler{
+  background-color: rgb(254,172,149);
+  color: white;
+}
+
+
+
+
