Connexion de mon formulaire à ma base de données MySQL

--- a/cv_en_lignePHP/styleCV.css
+++ b/cv_en_lignePHP/styleCV.css
@@ -373,6 +373,9 @@ input, textarea{
   border-radius: 10px;
   margin: 5px;
 }
+.madame{
+  margin-right: 50px;
+}
 .nom, .email, .telephone, .objet{
   width: 50%;
 }
