--- a/cv_en_lignePHP/styleCV.css
+++ b/cv_en_lignePHP/styleCV.css
@@ -170,7 +170,7 @@ header{
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding-top: 30px;
+  padding-top: 10px;
  
 
 }
@@ -234,6 +234,7 @@ header{
 }
 .os{
   background-color: rgb(212, 212, 212, 0.6);
+  border-radius: 20px;
   width: 400px;
   display: flex;
   padding: 10px;
@@ -241,16 +242,19 @@ header{
 .langages{
   display: flex;
   background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 20px;
   width: 400px;
   padding: 10px;
 }
 .outils{
   background-color: rgb(212, 212, 212, 0.6);
+  border-radius: 20px;
   width: 400px;
   padding: 10px;
 }
 .savoirfaire{
   background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 20px;
   width: 400px;
   padding: 10px;
 }
@@ -278,21 +282,24 @@ header{
 
 .photographe{
   text-align: center;
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgb(212, 212, 212, 0.6);
+  /* background-color: rgba(255, 255, 255, 0.5); */
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 20px;
+  padding: 30px 30px 10px 30px;
   border-radius: 20px;
 }
 .photo{
   max-width: 100%;
   transition: transform 0.5s ease-in-out;
   cursor: pointer;
+  width: 500px;
 }
 .photo.agrandie {
   transform: scale(1.5);
+  margin: auto;
 }
 
 
@@ -396,13 +403,33 @@ input, textarea{
 .annuler:hover{
   box-shadow:5px 5px 5px rgba(0,0,0,0.5);
 }
+.echo{
+  text-align: center;
+}
 
 
 
 /*Media querries*/
-@media screen and (max-width:1500px) {   
+@media screen and (max-width:1340px) {   
   .tablecontact{
     margin-bottom: 50px;
+  }
+  .outils{
+    background-color: rgba(255, 255, 255, 0.5);
+  
+  }
+  .savoirfaire{
+    background-color: rgb(212, 212, 212, 0.6);
+  }
+}
+
+@media screen and (max-width:900px) {   
+  .outils{
+    
+    background-color: rgb(212, 212, 212, 0.6);
+  }
+  .savoirfaire{
+    background-color: rgba(255, 255, 255, 0.5);
   }
 }
 
@@ -425,4 +452,4 @@ input, textarea{
 
 
 
-
+  
