--- a/cv_en_lignePHP/styleCV.css
+++ b/cv_en_lignePHP/styleCV.css
@@ -364,7 +364,7 @@ header{
   text-align: center;
 }
 
-fieldset{
+.formulaire form{
   border: 5px outset;
   background-color: rgba(255, 255, 255, 0.5);
   border-radius: 20px;
