--- a/cv_en_lignePHP/styleCV.css
+++ b/cv_en_lignePHP/styleCV.css
@@ -125,7 +125,7 @@ header{
   border: 5px ridge white;
   border-radius: 20px;
   padding: 5px;
-  background-color: rgb(212, 212, 212, 0.7);
+  background-color: rgba(212, 212, 212, 0.702);
   color: black;
   font-weight: bold;
   text-align: center;
