Cv en ligne, modification des media querries

--- a/cv_en_lignePHP/styleCV.css
+++ b/cv_en_lignePHP/styleCV.css
@@ -501,6 +501,12 @@ input, textarea{
     .photographe img{
       width: 400px;
     }
+    .formulaire{
+      width: 400px;
+    }
+    .tablecontact{
+      width: 400px;
+    }
   }
 
 
