--- a/Session/TP_incription_connexion/style.css
+++ b/Session/TP_incription_connexion/style.css
@@ -1,113 +1,148 @@
 * {
-    margin: 0;
-    padding: 0; 
-    box-sizing: border-box;
-  }
-  
-  body, html {
-    height: 100vh;
-  }
+  margin: 0;
+  padding: 0; 
+  box-sizing: border-box;
+}
 
-  body{
-    display: flex;
-    flex-direction: column;
-    background-image: url(fondecran.jpg);
-    font-family: 'Lato', sans-serif;   
-  }
+body, html {
+  height: 100vh;
+}
 
-  main{
-    flex-grow:1;
-    padding-top: 100px;
-    margin: 20px;
-  }
-  
-  header{
-    position: fixed;
-    z-index: 2;
-    width: 100%;
-  }
-  
-  .navbar{
-    background-color: rgb(125,78,166) !important;
-    display: flex !important;
-    align-items: end !important;
+body{
+  display: flex;
+  flex-direction: column;
+  background-image: url(fondecran.jpg);
+  font-family: 'Lato', sans-serif;   
+}
+
+main{
+  flex-grow:1;
+  padding-top: 100px;
+  display: flex;
+  flex-direction: column;
+}
+
+h2{
+  margin-top: 20px;
+  text-align: center;
+  font-weight: bold;
+}
+
+h5{
+  margin-top: 20px;
+  text-align: center;
+}
+
+h4{
+  text-align: center;
+}
+
+button{
+  width: 10vw;
+  margin: auto;
+  margin-top: 50px;
+  padding: 10px;
+  border-radius: 20px;
+  background-color: #7D4EA6;
+  width: 150px;
+}
+
+button a{
+color: white;
+}
+
+/* fORMULAIRE */
+form{
+  margin: auto;
+  margin-top: 50px;
+  margin-bottom: 20px;
+  border: 10px groove white;
+  border-radius: 20px;
+  width: 40vw;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+}
+.valider{
+  width: 20vw;
+  margin: auto;
+  padding: 10px;
+  background-color: #7D4EA6;
+  color: white;
+  border-radius: 20px;
+}
+
+.label{
+  text-align: center;
+  font-weight: bold;
+}
+
+input{
+  text-align: center;
+}
+
+a{
+  text-decoration: none;
+  color: black;
+}
+
+/* Menu */
+header{
+  position: fixed;
+  z-index: 2;
+  width: 100%;
+}
+
+.navbar{
+  background-color: rgb(125,78,166) !important;
+  display: flex !important;
+  align-items: end !important;
+}
+
+.container-fluid{
+  color: #ffffff !important;
+  display: flex !important;
+  align-items: end !important;
+  padding-left: 50px;
+  opacity: 2;
+}
+
+.nav-item{
+  padding-left: 50px;
+  opacity: 2;
+}
+
+.active{
+  color: #ffffff !important;
+  font-size: large;
+  padding: 10px;
+  display: block;
+}
+
+.navbar-brand{
+  padding: 5px;
+  opacity: 2;
+}
+.navbar-brand:hover{
+  background-color: black;
+  border-radius: 10px;
+}
+
+.active:hover{
+  background-color: black;
+  border-radius: 10px ;
+}
+
+/* Footer */
+footer{
+  background-color: rgb(125,78,166);
+  color: white;
+  font-size: 20px;
+  min-width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 20px;
+}
+
    
-  }
-  
-  .container-fluid{
-    color: #ffffff !important;
-    display: flex !important;
-    align-items: end !important;
-    padding-left: 50px;
-    opacity: 2;
-  }
-  
-  .nav-item{
-    padding-left: 50px;
-    opacity: 2;
-  }
-  
-  .active{
-    color: #ffffff !important;
-    font-size: large;
-    padding: 10px;
-    display: block;
-  }
-  
-  .navbar-brand{
-    padding: 5px;
-    opacity: 2;
-  }
-  .navbar-brand:hover{
-    background-color: black;
-    border-radius: 10px;
-  }
-  
-  .active:hover{
-    background-color: black;
-    border-radius: 10px ;
-  }
-
-
-  footer{
-    background-color: rgb(125,78,166);
-     color: white;
-     font-size: 20px;
-     min-width: 100%;
-     display: flex;
-     justify-content: center;
-     align-items: center;
-     padding-top: 20px;
-   }
-
-   h2{
-    text-align: center;
-    font-weight: bold;
-   }
-
-   form{
-    margin: auto;
-    margin-top: 50px;
-    border: 10px groove white;
-    border-radius: 20px;
-    width: 40vw;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    
-   }
-
-   .label{
-    text-align: center;
-    font-weight: bold;
-   }
-
-   input{
-    text-align: center;
-   }
-
-   a{
-    text-decoration: none;
-    color: black;
-    
-   }
